--- a/queries/notebooks/2_RewardDistribution.ipynb
+++ b/queries/notebooks/2_RewardDistribution.ipynb
@@ -739,8 +739,8 @@
     "    bin_size = 50\n",
     "\n",
     "    plt.figure()\n",
-    "    plt.hist(rounds, bins=bin_size, alpha=0.5, label=\"NFT\")\n",
-    "    plt.hist(roundsOffline, bins=bin_size, alpha=0.5, label=\"FT\")\n",
+    "    plt.hist(rounds, bins=bin_size, alpha=0.5, label=\"Starting Rounds\")\n",
+    "    plt.hist(roundsOffline, bins=bin_size, alpha=0.5, label=\"Ending Rounds\")\n",
     "    plt.rcParams[\"figure.autolayout\"] = True\n",
     "    plt.yscale('log')\n",
     "    plt.xlabel(\"Blockround\")\n",
