query fixing and naming

--- a/queries/notebooks/5_countFT_NFT.ipynb
+++ b/queries/notebooks/5_countFT_NFT.ipynb
@@ -588,6 +588,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8752de9c-963f-4c67-9050-70e224f9a5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#inner join doesn't delete the duplicated rows, therefore drop it manually \n",
+    "dfNFT = dfNFT.drop(\"blockround\")\n",
+    "dfFT = dfFT.drop(\"blockround\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "db500194-605f-4409-ab39-a868360ce72a",
    "metadata": {},
