--- a/queries/notebooks/2_RewardDistribution.ipynb
+++ b/queries/notebooks/2_RewardDistribution.ipynb
@@ -375,14 +375,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b8ea48ff-0a73-4802-abeb-88e9f7bfb235",
-   "metadata": {},
-   "source": [
-    "### Calculate the Number of Staker Related Transactions "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d9a466ea-a78c-424f-b4e2-550450c627e7",
@@ -398,28 +390,7 @@
      ]
     }
    ],
-   "source": [
-    "#write number of stakers in gold table\n",
-    "#append to get a history over the development\n",
-    "transactions = dfTx.count()\n",
-    "newestRoundTx = dfTx.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
-    "\n",
-    "result = spark.createDataFrame(\n",
-    "    [\n",
-    "        (transactions, newestRoundTx)  # create your data here, be consistent in the types.\n",
-    "        \n",
-    "    ],\n",
-    "    [\"NrOfTransactions\", \"CreationRound\"]  # add your column names here\n",
-    ")\n",
-    "\n",
-    "result.write.format(\"mongodb\") \\\n",
-    "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
-    "  \t.mode(\"append\") \\\n",
-    "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'NumberOfStakerRelatedTransactions_2') \\\n",
-    "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
-    "  \t.save()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -543,6 +514,35 @@
     "  \t.mode(\"append\") \\\n",
     "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
     "  \t.option('spark.mongodb.collection', 'NumberOfStakerCandidates_2') \\\n",
+    "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
+    "  \t.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d8de86-b15b-4762-81a3-f27e47406a79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#write number of stakers in gold table\n",
+    "#append to get a history over the development\n",
+    "transactions = dfTx.count()\n",
+    "newestRoundTx = dfTx.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
+    "\n",
+    "result = spark.createDataFrame(\n",
+    "    [\n",
+    "        (transactions, newestRoundTx)  # create your data here, be consistent in the types.\n",
+    "        \n",
+    "    ],\n",
+    "    [\"NrOfTransactions\", \"CreationRound\"]  # add your column names here\n",
+    ")\n",
+    "\n",
+    "result.write.format(\"mongodb\") \\\n",
+    "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
+    "  \t.mode(\"append\") \\\n",
+    "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
+    "  \t.option('spark.mongodb.collection', 'NumberOfStakerRelatedTransactions_2') \\\n",
     "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
     "  \t.save()"
    ]
@@ -908,10 +908,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "50279100-81c5-4e57-ba8b-2f0e549f85ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241m.\u001B[39mstop()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
    "source": [
     "spark.stop()"
    ]
