--- a/queries/notebooks/6_PatternsInNetwork.ipynb
+++ b/queries/notebooks/6_PatternsInNetwork.ipynb
@@ -450,7 +450,7 @@
    "id": "d82d93df",
    "metadata": {},
    "source": [
-    "Write the results to MongoDB silver collection."
+    "Write the results to MongoDB gold collection."
    ]
   },
   {
