--- a/queries/notebooks/2_RewardDistribution.ipynb
+++ b/queries/notebooks/2_RewardDistribution.ipynb
@@ -75,6 +75,7 @@
     }
    ],
    "source": [
+    " #\n",
     "#create sparksession\n",
     "#when copying change appName\n",
     "spark = SparkSession \\\n",
@@ -909,10 +910,10 @@
      "evalue": "name 'spark' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241m.\u001B[39mstop()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'spark' is not defined"
      ]
     }
    ],
